# fimufit

./: .gitignore  LICENSE  README.md  pyproject.toml
mufit/: bulkglassfit.py  main.py
tests/: test_mufit.py
