[project]
name = "mufit"
version = "0.0.1"
authors = [
  { name="Jeroen van \'t Ende", email="jeroen.vantende@outlook.com" },
]
description = "A small Solver"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/Kwabratseur/fimufit"
