[build-system]
requires = ["setuptools >= 40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mufit"
version = "0.0.1"
authors = [
  { name='Jeroen van t Ende', email="jeroen.vantende@outlook.com" },
]
description = "A small Solver"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas",
    "plotly",
    "matplotlib",
    "seaborn",
    "scipy"
]
[project.scripts]
mufit = "mufit:main"

[project.urls]
Homepage = "https://github.com/Kwabratseur/fimufit"
